# tape

./: INSTALL  Makefile  Makefile.in  NEWS  README.md  autogen.sh  config.h  config.status  configure  configure.ac  doxy.conf  lz.h  tape.h
anch/: car.anch  files.anch  test.anch
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/: .car.c  .libcar.c  Makefile  Makefile.am  Makefile.in  libtape.anch  libtape.c  libxzcompress.c  libxzextract.c  tape.anch  tape.c
src/.deps/: badlib.Po  car.Po  libcar.Po  libtape.Po  libxzcompress.Po  libxzextract.Po  main.Po  tape.Po
